update swagger and edit some response helpers
